# MIPT_PROG_3rdTERM

HOME_WORK/T00_BIZZBUZZ/: CMakeLIsts.txt  CMakeLists.txt
HOME_WORK/T00_BIZZBUZZ/headers/: err.h  err_.h  trans.h
HOME_WORK/T00_BIZZBUZZ/source/: bizz-buzz.c  err.c  trans.c
HOME_WORK/T01_PIPE/: CMakeLists.txt
HOME_WORK/T01_PIPE/headers/: errors.h
HOME_WORK/T01_PIPE/source/: errors.c  pipe.c
HOME_WORK/T02_SIG/: makefile  recieve.c  send.c
SEMINAR_TASKS/T00_BIZZBUZZ/: bizz-buzz  bizz-buzz.c  main.c  makefile
SEMINAR_TASKS/T01_CP/: _cp  cp.c  makefile
SEMINAR_TASKS/T02_FIFO/: fifo  fifo.c  makefile
SEMINAR_TASKS/T03_PID/: makefile  pid  pid-out.txt  pid.c
SEMINAR_TASKS/T04_REDIR/: makefile  redir.c
SEMINAR_TASKS/T06_MSG/: makefile  msg.h  receiver.c  sender.c
SEMINAR_TASKS/T07_MMAP/: makefile  mmap.c
SEMINAR_TASKS/T09_DIR/: dir.c  makefile
SEMINAR_TASKS/T10_THREAD/: calc.c  makefile
